--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -59,7 +59,7 @@
         </div>
         <div class="col-md-2 d-flex align-items-center">
             <div class="text-end w-100">
-                <p> Hello! User </p>
+                <p> Hello! {{ current_user.username }} </p>
             </div>
         </div>
     </div>
