--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+{% extends 'base_v2.html' %}
 
-    <title>LiveGaze</title>
+{% block title %}
+    LiveGaze
+{% endblock %}
+{% block navbar_title %}
+    LiveGaze
+{% endblock %}
+
+{% block head %}
     <style>
         .board-card {
             height: 50vh;
@@ -37,33 +36,25 @@
             height: 100%;
         }
     </style>
-</head>
-<body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-<div class="container mt-5">
-    <div class="row">
-        <div class="col-md-4">
-            <h1> LiveGaze </h1>
-        </div>
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-2">
-            <a href="boards/new">
-                <button class="btn btn-secondary w-100">Create Board</button>
-            </a>
-        </div>
-        <div class="col-md-2">
-            <button class="btn btn-secondary w-100">Eye Trackers</button>
-        </div>
-        <div class="col-md-2 d-flex align-items-center">
-            <div class="text-end w-100">
-                <p> Hello! {{ current_user.username }} </p>
-            </div>
-        </div>
-    </div>
+{% endblock %}
 
+
+{% block navbar_mid %}
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-2">
+        <a href="boards/new">
+            <button class="btn btn-secondary w-100">Create Board</button>
+        </a>
+    </div>
+    <div class="col-md-2">
+        <a href="trackers">
+            <button class="btn btn-secondary w-100">Eye Trackers</button>
+        </a>
+    </div>
+{% endblock %}
+
+{% block page_content %}
     <div class="container-fluid">
         <div class="row">
             {% for board in boards %}
@@ -112,6 +103,4 @@
             {% endfor %}
         </div>
     </div>
-</div>
-</body>
-</html>
+{% endblock %}
