--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -13,7 +13,7 @@
 
 <div class="container">
     <div class="register-container">
-        <h3 class="text-center">Create an Account</h3>
+        <h3 class="text-center">Login</h3>
         <form method="POST" autocomplete="on">
             <!-- Username -->
             <div class="mb-3">
