--- a/flask_app/templates/boards/create_board.html
+++ b/flask_app/templates/boards/create_board.html
@@ -127,6 +127,12 @@
                                      style="cursor: grab;">
                                 {# add a youtube icon at the top left of its thumbnail #}
                                 <img src="../static/icons/youtube.png" class="card-img stim-vid-icon">
+                            {% elif stimulus.stim_type.value == 3 %}
+                                    <h5 class="card-img draggable-img" data-stimtype="3" data-src="{{ stimulus.file_path }}" alt="..."
+                                     id="stimulusImg{{ stimulus.id }}" draggable="true"
+                                     style="cursor: grab;">{{ stimulus.file_path }}</h5>
+                                <img src="../static/icons/webpage.png" class="card-img stim-vid-icon">
+
                             {% endif %}
                         </div>
                     </div>
@@ -190,6 +196,7 @@
                                 <option value="0">Image</option>
                                 <option value="1">Video</option>
                                 <option value="2">Youtube</option>
+                                <option value="3">Webpage Embed</option>
                             </select>
                         </div>
 
@@ -216,6 +223,14 @@
                             </div>
                         </div>
 
+                        <div class="row mb-5" id="webpageEmbedInputGroup" style="display: none;">
+                            <label for="webpageEmbedUrl" class="col-form-label col-sm-4">Webpage Embed URL</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" id="webpageEmbedUrl"
+                                       placeholder="Enter URL to embed">
+                            </div>
+                        </div>
+
 
                         <div id="error-message" class="text-danger mt-2"></div> <!-- Error message container -->
                         <button type="submit" class="btn btn-success mt-3">Submit</button>
@@ -226,28 +241,6 @@
     </div>
 </div>
 
-{#<div class="modal fade" id="youtubeModal" tabindex="-1" aria-labelledby="youtubeModalTag" aria-hidden="true">#}
-{#    <div class="modal-dialog modal-dialog-centered">#}
-{#        <div class="modal-content">#}
-{#            <div class="modal-header">#}
-{#                <h5 class="modal-title" id="youtubeModalTag">Add Youtube Video</h5>#}
-{#                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>#}
-{#            </div>#}
-{#            <div class="modal-body">#}
-{#                <form id="youtube_form">#}
-{#                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">#}
-{#                    <div class="input-group mb-3">#}
-{#                        <span class="input-group-text" id="basic-addon1">https://www.youtube.com/watch?v=</span>#}
-{#                        <input type="text" class="form-control" placeholder="Video ID" aria-label="Video ID"#}
-{#                               aria-describedby="basic-addon1" id="youtube_video_id">#}
-{#                    </div>#}
-{#                    <div id="error-message" class="text-danger mt-2"></div> <!-- Error message container -->#}
-{#                    <button type="submit" class="btn btn-success mt-3">Submit</button>#}
-{#                </form>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#</div>#}
 
 <script type="text/javascript" src="{{ url_for('static', filename='js/create_board/create_board.js') }}"></script>
 </body>
